<?xml version="1.0"?>
<package format="2">
  <name>start_all</name>
  <version>0.0.0</version>
  <description>The start_all package</description>
  <maintainer email="zhan@todo.todo">zhan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
